--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "nodemon api/app.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
