--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node api/app.js",
-    "build": "cd client && npm install && npm run build"
+    "build": "npm install && cd client && npm install && npm run build"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
